
@startuml ControllersOnlyDiagramCode
skinparam linetype ortho
left to right direction

class ControllerSchermataAggiungiLibro {
}

class ControllerSchermataAggiungiPrestito {
}

class ControllerSchermataAggiungiUtente {
}

class ControllerSchermataIniziale {
}

class ControllerSchermataLibro {
}

class ControllerSchermataModificaLibro {
}

class ControllerSchermataModificaPrestito {
}

class ControllerSchermataModificaRitardo {
}

class ControllerSchermataModificaUtente {
}

class ControllerSchermataPrestito {
}

class ControllerSchermataPrincipale {
}

class ControllerSchermataRitardo {
}

class ControllerSchermataUtente {
}

class ControllerSchermataVisualizzaLibro {
}

class ControllerSchermataVisualizzaPrestito {
}

class ControllerSchermataVisualizzaRitardo {
}

class ControllerSchermataVisualizzaUtente {
}

ControllerSchermataPrincipale ..> ControllerSchermataIniziale
ControllerSchermataIniziale ..> ControllerSchermataLibro
ControllerSchermataIniziale ..> ControllerSchermataPrestito
ControllerSchermataIniziale ..> ControllerSchermataUtente
ControllerSchermataIniziale ..> ControllerSchermataRitardo

ControllerSchermataLibro ..> ControllerSchermataVisualizzaLibro
ControllerSchermataLibro ..> ControllerSchermataAggiungiLibro
ControllerSchermataVisualizzaLibro ..> ControllerSchermataModificaLibro

ControllerSchermataUtente ..> ControllerSchermataVisualizzaUtente
ControllerSchermataUtente ..> ControllerSchermataAggiungiUtente
ControllerSchermataVisualizzaUtente ..> ControllerSchermataModificaUtente

ControllerSchermataPrestito ..> ControllerSchermataVisualizzaPrestito
ControllerSchermataPrestito ..> ControllerSchermataAggiungiPrestito
ControllerSchermataVisualizzaPrestito ..> ControllerSchermataModificaPrestito 
ControllerSchermataRitardo ..> ControllerSchermataVisualizzaRitardo
ControllerSchermataVisualizzaRitardo ..>ControllerSchermataModificaRitardo

note as N1
Metodi e attributi dei controller 
sono implementati in file contenuti 
nella directory IndividualClassControllersCode e nel
file ControllersOnlyDiagramCodeExplicit ai fini 
di una migliore rappresentazione
end note

@enduml